# SunWave

./: .gitignore  README.md
code/: CMakeLists.txt  CMakePresets.json  install.ps1
code/src/: GameEnvironment.cpp  GameEnvironment.h  main copy.txt  main.cpp
code/src/Scenes/: sceneManager.cpp  sceneManager.h
code/src/Scenes/LevelConfigurations/: BalanceLevel1.json  BalanceLevelEasy1.json  BalanceLevelEasy2.json  BalanceLevelEasy3.json  BalanceLevelHard1.json  BalanceLevelHard2.json  BalanceLevelHard3.json  BalanceLevelHardPrep.json  BalanceLevelMedium1.json  BalanceLevelMedium2.json  BalanceLevelMedium3.json  BalanceLevelMediumPrep.json  BlanceLevelPrep.json  Blend.json  Default.json  Endcard.json  Level selector.json  Main Menu - Kopie.json  Main Menu.json  PosLevel1.json  PosLevel2.json  PosLevelEasy1.json  PosLevelEasy2.json  PosLevelEasy3.json  PosLevelHard1.json  PosLevelHard2.json  PosLevelHard3.json  PosLevelHardPrep.json  PosLevelMedium1.json  PosLevelMedium2.json  PosLevelMedium3.json  RampenSpass.json  RampenSpaÃŸ.json  Test.json  TestLevel.json  WallLevel.json
code/src/components/: Component.h  PhysicsCollider.cpp  PhysicsCollider.h
code/src/entities/: Entity.cpp  Entity.h  PlayerShape.cpp  PlayerShape.h  Shape.cpp  Shape.h  UiElement.cpp  UiElement.h
code/src/factorys/: EntityFactory.cpp  EntityFactory.h
code/src/fieldOfShapes/: fieldOfShapes.h
code/src/mesh/: MeshContainer.cpp  MeshContainer.h
code/src/minigames/: MinigameManager.cpp  MinigameManager.h
code/src/minigames/highscores/: highscores.json
code/src/physics/: CollisionTester.cpp  CollisionTester.h  MortonHashTableLogic.cpp  MortonHashTableLogic.h  PhysicsEngine.cpp  PhysicsEngine.h
code/src/shaders/: ShaderContainer.cpp  ShaderContainer.h  changingColor.glsl  defaultFragmentShader.glsl  defaultVertexShader.glsl  gridFragmentShader.frag  gridFragmentShader.glsl  gridVertexShader.glsl  gridVertexShader.vert  textFragmentShader.glsl  textVertexShader.glsl
code/src/shaders/shapeFragmentShader/: box.glsl  boxWithin.glsl  circle.glsl  cross.glsl  emptyShell.glsl  sTriangle.glsl  star.glsl  triangle.glsl  triangleWithin.glsl
code/src/ui/: FontLoader.cpp  FontLoader.h  UiManager.cpp  UiManager.h
code/src/util/: Camera.cpp  Camera.h  CollisionTester.cpp  CollisionTester.h  HelperFunctions.h  InfiniteGrid.cpp  InfiniteGrid.h  fileReader.cpp  fileReader.h  glfwPrep.cpp  glfwPrep.h
code/templates/: .gitignore-unity
(+24 files in other folders)
